--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "@mui/material": "^6.1.10",
     "next": "15.0.3",
     "react": "^18.3.1",
+    "react-calendly": "^4.3.1",
     "react-dom": "^18.3.1",
     "react-image-gallery": "^1.3.0",
-    "react-multi-carousel": "^2.8.5"
+    "react-multi-carousel": "^2.8.5",
+    "styled-components": "^6.1.13"
   },
   "devDependencies": {
     "@types/node": "^20",
