--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@heroicons/react": "^2.2.0",
     "@mui/icons-material": "^6.1.10",
     "@mui/material": "^6.1.10",
+    "mongodb": "^6.12.0",
     "next": "15.0.3",
+    "node-fetch": "^3.3.2",
     "react": "^18.3.1",
     "react-calendly": "^4.3.1",
     "react-dom": "^18.3.1",
